--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.20.4",
     "axios": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.0",
-    "react-query": "^3.39.2"
+    "react-hot-toast": "^2.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
